--- a/R/zzz.r.in
+++ b/R/zzz.r.in
@@ -13,8 +13,9 @@
   mpi.type <- "@MPITYPE@"
   mpi.libpath <- "@MPI_LIBPATH@"
 
-  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2"){
-    if(mpi.type == "OPENMPI"){
+  ### Nautilus needs MPT.
+  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2" || mpi.type == "MPT"){
+    if(mpi.type == "OPENMPI" || mpi.type == "MPT"){
       mpi.libname <- "libmpi"
     } else{
       mpi.libname <- "libmpich"
@@ -41,17 +42,20 @@
     stop("pbdMPI is not loaded.")
   }
 
-  if(! exists(".__DISABLE_MPI_INIT__", envir = .GlobalEnv) ||
-      get(".__DISABLE_MPI_INIT__", envir = .GlobalEnv) != TRUE){
-    .Call("spmd_initialize", PACKAGE = "pbdMPI")
-    .comm.size <- .Call("spmd_comm_size", 0L, PACKAGE = "pbdMPI")
-    .comm.rank <- .Call("spmd_comm_rank", 0L, PACKAGE = "pbdMPI")
-    assign(".comm.size", .comm.size, envir = .GlobalEnv)
-    assign(".comm.rank", .comm.rank, envir = .GlobalEnv)
-  }
+  # if(! exists(".__DISABLE_MPI_INIT__", envir = .GlobalEnv)){
+  #   assign(".__DISABLE_MPI_INIT__", FALSE, envir = .GlobalEnv)
+  # }
+
+  .Call("spmd_initialize", PACKAGE = "pbdMPI")
+  .comm.size <- .Call("spmd_comm_size", 0L, PACKAGE = "pbdMPI")
+  .comm.rank <- .Call("spmd_comm_rank", 0L, PACKAGE = "pbdMPI")
+  assign(".comm.size", .comm.size, envir = .GlobalEnv)
+  assign(".comm.rank", .comm.rank, envir = .GlobalEnv)
 } # End of .onLoad().
 
 .onUnload <- function(libpath){
+  ### Do not finalize MPI by default, which can cause problem for external API.
+  ### Let user take care of shut down business.
   pbdMPI:::spmd.finalize(mpi.finalize = FALSE)
   library.dynam.unload("pbdMPI", libpath)
 
@@ -59,8 +63,8 @@
   mpi.type <- "@MPITYPE@"
   mpi.libpath <- "@MPI_LIBPATH@"
 
-  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2"){
-    if(mpi.type == "OPENMPI"){
+  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2" || mpi.type == "MPT"){
+    if(mpi.type == "OPENMPI" || mpi.type == "MPT"){
       mpi.libname <- "libmpi"
     } else{
       mpi.libname <- "libmpich"
