--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: pbdMPI
-Version: 0.1-0
-Date: 2012-08-24
+Version: 0.1-1
+Date: 2012-10-02
 Title: Programming with Big Data -- Interface to MPI
 Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email =
         "wccsnow@gmail.com"), person("George", "Ostrouchov", role =
         "aut"), person("Drew", "Schmidt", role = "aut"),
         person("Pragneshkumar", "Patel", role = "aut"), person("Hao",
         "Yu", role = "aut"))
-Depends: R (>= 2.13.0), methods
+Depends: R (>= 2.13.0), methods, rlecuyer
 LazyLoad: yes
 LazyData: yes
 Description: pbdMPI provides an efficient interface to MPI by utilizing
@@ -18,9 +18,9 @@ SystemRequirements: OpenMPI (>= 1.5.4) on Linux and Mac, MPICH2 (>=
         1.4.1p1) on Windows
 License: GPL (>= 2)
 URL: http://r-pbd.org/
-Packaged: 2012-09-02 17:05:50 UTC; snoweye
+Packaged: 2012-10-02 19:39:09 UTC; snoweye
 Author: Wei-Chen Chen [aut, cre], George Ostrouchov [aut], Drew Schmidt
         [aut], Pragneshkumar Patel [aut], Hao Yu [aut]
 Maintainer: Wei-Chen Chen <wccsnow@gmail.com>
 Repository: CRAN
-Date/Publication: 2012-09-03 10:03:01
+Date/Publication: 2012-10-03 05:55:08
