--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pbdMPI
-Version: 0.1-1
-Date: 2012-10-02
+Version: 0.1-2
+Date: 2012-10-30
 Title: Programming with Big Data -- Interface to MPI
 Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email =
         "wccsnow@gmail.com"), person("George", "Ostrouchov", role =
@@ -14,13 +14,13 @@ Description: pbdMPI provides an efficient interface to MPI by utilizing
         S4 classes and methods with a focus on Single Program/Multiple
         Data (SPMD) parallel programming style, which is intended for
         batch parallel execution.
-SystemRequirements: OpenMPI (>= 1.5.4) on Linux and Mac, MPICH2 (>=
-        1.4.1p1) on Windows
+SystemRequirements: OpenMPI (>= 1.5.4) on Solaris, Linux and Mac,
+        MPICH2 (>= 1.4.1p1) on Windows
 License: GPL (>= 2)
 URL: http://r-pbd.org/
-Packaged: 2012-10-02 19:39:09 UTC; snoweye
+Packaged: 2012-11-30 22:31:49 UTC; snoweye
 Author: Wei-Chen Chen [aut, cre], George Ostrouchov [aut], Drew Schmidt
         [aut], Pragneshkumar Patel [aut], Hao Yu [aut]
 Maintainer: Wei-Chen Chen <wccsnow@gmail.com>
 Repository: CRAN
-Date/Publication: 2012-10-03 05:55:08
+Date/Publication: 2012-12-01 08:50:37
