--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pbdMPI
-Version: 0.1-4
-Date: 2013-01-30
+Version: 0.1-5
+Date: 2013-03-11
 Title: Programming with Big Data -- Interface to MPI
 Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email =
         "wccsnow@gmail.com"), person("George", "Ostrouchov", role =
@@ -21,9 +21,10 @@ URL: http://r-pbd.org/
 BugReports: RBigDataProgramming on Google Group
 MailingList: Please send questions and comments regarding pbdR to
         RBigData@gmail.com
-Packaged: 2013-02-13 19:30:38 UTC; snoweye
+Packaged: 2013-03-11 19:47:49 UTC; snoweye
 Author: Wei-Chen Chen [aut, cre], George Ostrouchov [aut], Drew Schmidt
         [aut], Pragneshkumar Patel [aut], Hao Yu [aut]
 Maintainer: Wei-Chen Chen <wccsnow@gmail.com>
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-02-14 07:44:47
+Date/Publication: 2013-03-12 07:45:04
