--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pbdMPI
-Version: 0.1-7
-Date: 2013-06-17
+Version: 0.1-8
+Date: 2013-07-04
 Title: Programming with Big Data -- Interface to MPI
 Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email =
         "wccsnow@gmail.com"), person("George", "Ostrouchov", role =
@@ -10,6 +10,8 @@ Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email =
 Depends: R (>= 2.14.0), methods, rlecuyer
 LazyLoad: yes
 LazyData: yes
+Copyright: See pbdMPI/inst/fpmpi_LICENSE.txt for the files in
+        src/fpmpi/.
 Description: pbdMPI provides an efficient interface to MPI by utilizing
         S4 classes and methods with a focus on Single Program/Multiple
         Data (SPMD) parallel programming style, which is intended for
@@ -21,10 +23,10 @@ URL: http://r-pbd.org/
 BugReports: http://group.r-pbd.org/
 MailingList: Please send questions and comments regarding pbdR to
         RBigData@gmail.com
-Packaged: 2013-07-02 17:02:37 UTC; snoweye
+Packaged: 2013-07-04 18:26:20 UTC; snoweye
 Author: Wei-Chen Chen [aut, cre], George Ostrouchov [aut], Drew Schmidt
         [aut], Pragneshkumar Patel [aut], Hao Yu [aut]
 Maintainer: Wei-Chen Chen <wccsnow@gmail.com>
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-07-03 16:33:31
+Date/Publication: 2013-07-04 21:48:51
