--- a/R/zzz.r.in
+++ b/R/zzz.r.in
@@ -14,7 +14,9 @@
   mpi.libpath <- "@MPI_LIBPATH@"
 
   ### Nautilus needs MPT.
-  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2" || mpi.type == "MPT"){
+  i.lib <- NULL
+  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2" || mpi.type == "MPICH" ||
+      mpi.type == "MPT"){
     if(mpi.type == "OPENMPI" || mpi.type == "MPT"){
       mpi.libname <- "libmpi"
     } else{
@@ -28,7 +30,6 @@
               # list.files(path = mpi.libpath,
               #            pattern = paste(mpi.libname, "\\..*dylib", sep = ""),
               #            full.names = TRUE))
-    i.lib <- NULL
     for(i in 1:length(libs)){
       ret <- try(dyn.load(libs[i]), silent = TRUE)
       if(class(ret) != "try-error"){
@@ -62,21 +63,23 @@
   # assign(".comm.size", .comm.size, envir = .GlobalEnv)
   # assign(".comm.rank", .comm.rank, envir = .GlobalEnv)
 
-  # base:::set.seed(1234)
+  # base::set.seed(1234)
   invisible()
 } # End of .onLoad().
 
 .onUnload <- function(libpath){
   ### Do not finalize MPI by default, which can cause problem for external API.
   ### Let user take care of shut down business.
-  pbdMPI:::spmd.finalize(mpi.finalize = FALSE)
+  pbdMPI::spmd.finalize(mpi.finalize = FALSE)
   library.dynam.unload("pbdMPI", libpath)
 
   ### Shared library needs to be unloaded after "pbdMPI.so"
   mpi.type <- "@MPITYPE@"
   mpi.libpath <- "@MPI_LIBPATH@"
 
-  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2" || mpi.type == "MPT"){
+  ### Nautilus needs MPT.
+  if(mpi.type == "OPENMPI" || mpi.type == "MPICH2" || mpi.type == "MPICH" ||
+      mpi.type == "MPT"){
     if(mpi.type == "OPENMPI" || mpi.type == "MPT"){
       mpi.libname <- "libmpi"
     } else{
